src/other/mico-2.3.12/test/idl/error/expected-stderr-case2.idl
case2.idl:8: base interface 'A' is not yet defined
